# Habit-Tracker

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  AgentHandoff.md  CHANGELOG.md  CHEATSHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  USER_MANUAL.md  ai.js  app.js  biome.json  cliff.toml  codecov.yml  eslint.config.js  index.html  knip.json  manifest.json  package-lock.json  package.json  pyproject.toml  server.js  style.css  sw.js  translations.js
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.speckit/: constitution.md
.speckit/prompts/: analyze.md  checklist.md  clarify.md  git_workflows.md  implement.md  taskstoissues.md  telugu_llm_expert.md
.speckit/templates/: plan.md  specify.md  tasks.md
streakr/: __init__.py  dates.py  schema.py
tests/: test_dates.py  test_schema.py
