[project]
name = "streakr"
version = "4.0.0"
description = "Streakr habit tracker — shared validation and streak logic"
readme = "AgentHandoff.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=streakr --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["streakr"]

[tool.coverage.report]
fail_under = 80
show_missing = true
